# verval

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_verval.py
verval/: base.py  config.py  sso.py
verval/sp/: auth.py  base.py  config.py
