[tool.poetry]
name = "verval"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
bs4 = "^0.0.1"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
yapf = "^0.30.0"
flake8 = "^3.8.4"
mypy = "^0.790"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
